--- a/css/main.css
+++ b/css/main.css
@@ -18,9 +18,16 @@ img {
   height: 100px;
 }
 
+#selectCat{
+  width: 100%;
+  height: 30px;
+  margin: 10px;
+  background-color: rgb(49, 177, 219);
+  border-radius: 5px;
+}
 .card {
 /* hay que ajustar todo queda a la izquierda y no queda bien, tiene que estar al centro y ocupar todo el div */
-  width: 100%;
+  width: 30%;
   margin: 0 auto;
   display: flex;
   /* flex-direction: column; */
@@ -32,6 +39,7 @@ img {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin: 20px;
 }
+
 .card-body {
   width: 100%;
   display: flex;
